--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+:root {
+  /* ### Primary */
+  --Bright-Blue: hsl(220, 98%, 61%);
+  --Check-Background: linear-gradient hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
+
+  /* ### Neutral */
+
+  /* ### Light Theme */
+  --Very-Light-Gray: hsl(0, 0%, 98%);
+  --Very-Light-Grayish-Blue: hsl(236, 33%, 92%);
+  --Light-Grayish-Blue: hsl(233, 11%, 84%);
+  --Dark-Grayish-Blue: hsl(236, 9%, 61%);
+  --Very-Dark-Grayish-Blue: hsl(235, 19%, 35%);
+
+  /* ### Dark Theme */
+  --Very-Dark-Blue: hsl(235, 21%, 11%);
+  --Very-Dark-Desaturated-Blue: hsl(235, 24%, 19%);
+  --Light-Grayish-Blue: hsl(234, 39%, 85%);
+  --Light-Grayish-Blue: hsl(236, 33%, 92%);
+  --Dark-Grayish-Blue: hsl(234, 11%, 52%);
+  --Very-Dark-Grayish-Blue: hsl(233, 14%, 35%);
+  --Very-Dark-Grayish-Blue: hsl(237, 14%, 26%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-todo {
+  /* padding: 3rem; */
+  background: var(--Very-Dark-Blue);
+}
+
+/* .main-todo > div {
+  color: var(--Light-Grayish-Blue); 
+  padding: 1rem;
+} */
+
+.input-div {
+  margin-bottom: 3rem;
+  padding: 2rem 3rem;
+}
+
+.input-div > input {
+  width: 100%;
+  border: 0;
+  background: var(--Very-Dark-Blue);
+  color: var(--Light-Grayish-Blue);
+}
+
+input:focus {
+  border: 0;
+  outline: none;
+}
+
+.img-div {
+  background: url(../public/images/bg-desktop-dark.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* width: 100%; */
+  /* height: 50vh; */
+}
+
+.todo-div {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid white;
+  /* width: 100%; */
+  padding: 2rem 1rem;
+  max-width: 500px;
+}
+
+.todo-div-div {
+  display: flex;
+  gap: 1em;
+}
+
+.check-btn {
+  border-radius: 100%;
+  height: 20px;
+  width: 20px;
+  border: 1px solid black;
+  background: var(--Dark-Grayish-Blue);
+  /* background: black; */
+  cursor: pointer;
+}
+
+.cross-btn {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+}
+
+.footer-div {
+  display: flex;
+  padding: 1rem;
+  color: var(--Light-Grayish-Blue);
 }
